Enable emmet within jsx files

--- a/vscode/settings.json
+++ b/vscode/settings.json
@@ -87,5 +87,8 @@
   ],
   "javascript.updateImportsOnFileMove.enabled": "always",
   "editor.suggestSelection": "first",
-  "vsintellicode.modify.editor.suggestSelection": "automaticallyOverrodeDefaultValue"
+  "vsintellicode.modify.editor.suggestSelection": "automaticallyOverrodeDefaultValue",
+  "emmet.includeLanguages": {
+    "javascript": "javascriptreact"
+  }
 }
